# MCPHubs

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  LICENSE  README.md  README_zh.md  app.py  config.py  docker-compose.yml  main.py  migrate_disabled_tools.py  pyproject.toml  requirements.txt  start.sh
cli/: SKILL.md  package-lock.json  package.json
cli/src/: client.ts  config.ts  index.ts
db/: __init__.py  engine.py  models.py
routers/: __init__.py  audit.py  auth.py  files.py  health.py  servers.py  settings.py  terminal.py
services/: __init__.py  auth.py  modelscope.py  progressive.py  proxy.py  registry.py  summarizer.py  transport.py
web/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
web/app/: layout.tsx
web/app/(dashboard)/: layout.tsx  page.tsx
web/app/(dashboard)/debug/: page.tsx
web/app/(dashboard)/files/: page.tsx
web/app/(dashboard)/logs/: page.tsx
web/app/(dashboard)/servers/: page.tsx
web/app/(dashboard)/settings/: layout.tsx  page.tsx
web/app/(dashboard)/settings/integrations/: page.tsx
web/app/(dashboard)/settings/llm/: page.tsx
web/app/(dashboard)/settings/security/: page.tsx
web/app/(dashboard)/terminal/: page.tsx
web/app/login/: layout.tsx  page.tsx
web/components/: app-sidebar.tsx
web/lib/: api.ts
