[project]
name = "mcphubs"
version = "0.1.0"
description = "Unified MCP Gateway — register any MCP server, expose as Streamable HTTP"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "fastmcp>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "click>=8.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
mcphubs = "mcphubs.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcphubs"]
